# FileInfo

./: .gitignore  .pre-commit-config.yaml  FileInfo.command  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
docs/: FELHASZNALOI_UTMUTATO.md  USER_GUIDE.md  guide_de.html  guide_en.html  guide_es.html  guide_fr.html  guide_hu.html
docs/plans/: WINDOWS_PORT.md
fileinfo/: __init__.py  __main__.py  app.py  deps.py  deps_dialog.py  i18n.py  main_window.py  metadata_panel.py  thumbnails.py  worker.py
fileinfo/extractors/: __init__.py  base.py  fs.py  image.py  media.py  spotlight.py
fileinfo/locales/: de.json  es.json  fr.json  hu.json
fileinfo/resources/: icon.icns
